# megagent

./: CMakeLists.txt  README.md
src/: greeting.cpp  greeting.h  main.cpp
